--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@solana/spl-token": "^0.4.0",
     "@solana/web3.js": "^1.89.0",
+    "elliptic": "^6.6.1",
     "ethers": "^6.16.0",
     "lucide-react": "^0.300.0",
     "qrcode.react": "^4.2.0",
